projects/myportfolio/deploy_service_ingress.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: myportfolio

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: myportfolio
  name: myportfolio-deploy
  namespace: myportfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myportfolio
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: myportfolio
    spec:
      containers:
        # - image: docker:stable-dind
        - image: sp0re90/myportfolio:latest
          name: myportfolio
          securityContext:
            privileged: true
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: myportfolio
  name: myportfolio-service
  namespace: myportfolio
spec:
  ports:
  - name: http
    port: 80
    targetPort: 3000
  selector:
    app: myportfolio
  sessionAffinity: None
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: myportfolio-ingress
  namespace: myportfolio
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: mircoporetti-test.me
      http:
        paths:
          - path: /
            backend:
              serviceName: myportfolio-service
              servicePort: 80
